scaled back code. it doesn't need to be pretty at this stage.